# fluxinfer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
cmake/: .gitkeep
docs/: moe-vram-cache-research.md
docs/benchmarks/: fluxinfer-vs-lmstudio-qwen3.5-9b-rtx5060.md  fluxinfer-vs-lmstudio-v2-qwen3.5-9b-rtx5060.md  qwen3.5-9b-q8_0-rtx5060-v2.md  qwen3.5-9b-q8_0-rtx5060.md
include/fluxinfer/hardware/: cpu_probe.hpp  gpu_probe.hpp  hardware_info.hpp  memory_probe.hpp  vram_sampler.hpp
include/fluxinfer/llama/: benchmark_parser.hpp  gguf_metadata.hpp  llama_locator.hpp  llama_runner.hpp
include/fluxinfer/process/: process_runner.hpp
include/fluxinfer/profiles/: profile.hpp  profile_store.hpp
include/fluxinfer/tuner/: benchmark_result.hpp  comparison.hpp  parameter_space.hpp  scoring.hpp  tune_config.hpp  tuner.hpp
src/: main.cpp
src/hardware/: cpu_probe.cpp  gpu_probe.cpp  hardware_info.cpp  memory_probe.cpp  nvml_shim.hpp  vram_sampler.cpp
src/llama/: benchmark_parser.cpp  gguf_metadata.cpp  llama_locator.cpp  llama_runner.cpp
src/process/: line_buffer.hpp  process_runner.cpp  process_runner_posix.cpp  process_runner_win.cpp
src/profiles/: profile.cpp  profile_store.cpp
src/tuner/: comparison.cpp  parameter_space.cpp  scoring.cpp  tuner.cpp
tests/: CMakeLists.txt  main.cpp  self_path.hpp  test_benchmark_parser.cpp  test_comparison_stats.cpp  test_gguf_metadata.cpp  test_llama_flags.cpp  test_llama_oom.cpp  test_parameter_space.cpp  test_process_runner.cpp  test_profile.cpp  test_scoring.cpp
